0.1.1 (unreleased)
==================


0.1.0 (2008-09-10)
==================

 - Initial implementation [Tarek Ziadé]
 - Created recipe with ZopeSkel [Tarek Ziadé].
