@@ -1,6 +1,7 @@
 0.1.1 (unreleased)
 ==================
 
+ - Using a sphinx-build local to the environment [Tarek]
 
 0.1.0 (2008-09-10)
 ==================
